# datacortex

./: .gitignore  CLAUDE.base.md  CLAUDE.md  EMBEDDINGS.md  PHASE_3_IMPLEMENTATION.md  README.md  SKILL.md  install.sh  module.yaml  pyproject.toml  requirements.txt  test_embeddings.py
commands/: datacortex.md
config/: datacortex.yaml
docs/: AI_EXTENSIONS_PLAN.md  DIGEST_USAGE.md  INTEGRATION_EXAMPLE.md  PHASE2_DIGEST.md  PHASE4_SUMMARY.md  phase4-insights.md
examples/: embedding_usage.py
frontend/: index.html  workspace.html
frontend/css/: style.css
frontend/js/: app.js  controls.js  details.js  graph.js
skills/datacortex/: SKILL.md
src/datacortex/: __init__.py  __main__.py  registry.py
src/datacortex/ai/: __init__.py  cache.py  embeddings.py  similarity.py
src/datacortex/api/: app.py
src/datacortex/api/routes/: files.py  graph.py  nodes.py  pulse.py  terminal.py
src/datacortex/cli/: commands.py
src/datacortex/core/: __init__.py  config.py  database.py  models.py
src/datacortex/digest/: __init__.py  formatter.py  generator.py
src/datacortex/gaps/: __init__.py  detector.py  formatter.py
src/datacortex/indexer/: __init__.py  graph_builder.py
src/datacortex/insights/: __init__.py  analyzer.py  formatter.py
src/datacortex/metrics/: __init__.py  centrality.py  clusters.py
src/datacortex/pulse/: __init__.py  generator.py
src/datacortex/qa/: __init__.py  formatter.py  ranker.py  retriever.py
tests/: __init__.py  test_insights.py
tools/: index.js
