[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datacortex"
version = "0.1.0"
description = "Knowledge graph visualization for Datacore"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Datafund", email = "dev@datafund.io" }
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "networkx>=3.2",
    "python-louvain>=0.16",
    "pyyaml>=6.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[project.scripts]
datacortex = "datacortex.cli.commands:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/datacortex"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
